<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/difficulty"
           android:textAlignment="center"
           android:textColor="#000000"
           android:textSize="20sp"/>

       <RadioGroup
           android:id="@+id/difficultyButtons"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:checkedButton="@id/EasyButton"
           android:layout_marginRight="0dp">

           <RadioButton
               android:id="@+id/EasyButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="65dp"
               android:gravity="center"
               android:text="Easy"
               android:onClick="changeDifficulty"/>

           <RadioButton
               android:id="@+id/MediumButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:text="Medium"
               android:onClick="changeDifficulty"/>


           <RadioButton
               android:id="@+id/HardButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:text="Hard"
               android:onClick="changeDifficulty"/>


       </RadioGroup>

    <Button
        style="@style/settingsDialogButtons"
        android:text="@string/highscores" />

    <Button
        style="@style/settingsDialogButtons"
        android:text="@string/rate_this_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/VersionInfo"
        android:background="#FFFF"/>
</LinearLayout>
